Updated to index user groups - search user groups.  Added job to re-index user groups.  Started adding group workspaces code.  Removed old help images